--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,13 @@
 .popup__container {
-    width: 100%;
-    height: 100%;
-    display: flex;
+    margin: auto;
+    width: 430px;
+    background: white;
+    border-radius: 10px;
+    position: relative;
+}
+
+@media (max-width: 425px) {
+    .popup__container {
+        width: 282px;
+    }
 }
