--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,13 +1,12 @@
-.popup__job {
+.popup__input {
     margin: 0;
     padding: 0;
     margin-left: 36px;
     margin-bottom: 27px;
     width: 358px;
-    height: 27px;
     outline: none;
     border: none;
-    border-bottom: 1px solid #000000;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -16,9 +15,8 @@
 }
 
 @media (max-width: 425px) {
-    .popup__job {
+    .popup__input {
         width: 238px;
         margin-left: 22px;
-        margin-bottom: 0;
     }
 }
