--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     margin-left: 36px;
+    margin-bottom: 55px;
     width: 358px;
     height: 50px;
     background-color: black;
@@ -25,8 +26,10 @@
 @media (max-width: 425px) {
     .popup__save-button {
         width: 238px;
-        margin-top: 45px;
+        margin-top: 18px;
         margin-bottom: 25px;
         margin-left: 22px;
+        font-size: 14px;
+        line-height: 17px;
     }
 }
