--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -2,11 +2,18 @@
     margin: 0;
     padding: 0;
     margin-top: 34px;
-    margin-left: 36px;
     margin-bottom: 54px;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
     color: #000000;
+    text-align: center;
+}
+
+@media (max-width: 425px) {
+    .popup__title {
+        font-size: 18px;
+        line-height: 22px;
+    }
 }
