--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,17 +1,17 @@
 .profile__add-button {
     margin: 0;
-    padding: 0;
     margin-top: 35px;
     margin-left: auto;
     outline: none;
     background-color: transparent;
-    width: 150px;
+    min-width: 150px;
     height: 50px;
-    border: 1px solid #FFFFFF;
+    border: 2px solid #FFFFFF;
     cursor: pointer;
     background-image: url("../../../images/addbutton.svg");
     background-repeat: no-repeat;
     background-position: center;
+    border-radius: 2px;
 }
 
 .profile__add-button:hover {
@@ -21,7 +21,7 @@
 @media (max-width: 425px) {
     .profile__add-button {
         width: 282px;
-        margin-left: auto;
         margin-right: auto;
+        background-size: 16px;
     }
 }
