--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -5,7 +5,7 @@
     margin-left: 18px;
     outline: none;
     background-color: transparent;
-    width: 24px;
+    min-width: 24px;
     height: 24px;
     border: 1px solid #FFFFFF;
     cursor: pointer;
