--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,5 +1,6 @@
 .root {
+    margin: 8px;
     background: #000000;
-    overflow-x: hidden;
     font-family: 'Inter', Arial, sans-serif;
+    box-sizing: border-box;
 }
