--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,4 +1,6 @@
 .header__logo {
+    margin: 0;
+    padding: 0;
     width: 142px;
     height: 33px;
     background-image: url("../../../images/logo.svg");
@@ -10,7 +12,7 @@
 
 @media (max-width: 425px) {
     .header__logo {
-        margin-left: 27px;
+        margin-left: 19px;
         width: 103.74px;
         height: 24.4px;
         margin-bottom: 31.6px;
