--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -8,12 +8,15 @@
     font-size: 24px;
     line-height: 29px;
     color: #000000;
-    text-align: center;
+    text-align: start;
+    margin-left: 36px;
 }
 
 @media (max-width: 425px) {
     .popup__title {
         font-size: 18px;
         line-height: 22px;
+        margin-left: 22px;
+        margin-bottom: 75px;
     }
 }
