--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,32 +1,30 @@
 .profile__edit-button {
     margin: 0;
     padding: 0;
-    margin-top: 37px;
     margin-left: 18px;
+    margin-top: 16px;
     outline: none;
     background-color: transparent;
-    min-width: 24px;
+    width: 24px;
     height: 24px;
     border: 1px solid #FFFFFF;
     cursor: pointer;
     background-image: url("../../../images/editbutton.svg");
     background-repeat: no-repeat;
     background-position: center;
+    grid-area: edit;
 }
 
 .profile__edit-button:hover {
     opacity: 0.6;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 680px) {
     .profile__edit-button {
-        margin-top: 0;
-        margin-left: 0;
-        position: absolute;
-        top: 288px;
-        right: 38px;
+        background-size: 7.5px;
         width: 18px;
         height: 18px;
-        background-size: 7.5px;
+        margin-left: 10px;
+        margin-top: 10px;
     }
 }
