--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -2,16 +2,21 @@
     margin: 0;
     padding: 0;
     margin-top: 22px;
-    margin-left: 30px;
-    width: 294px;
-    display: flex;
-    flex-direction: column;
+    width: 336px;
+    display: grid;
+    grid-template-columns: 292px 1fr;
+    grid-template-areas: "title edit" "subtitle edit";
+    grid-area: text;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 500px) {
     .profile__text {
+        max-width: 217px;
         margin-top: 26px;
         margin-right: auto;
         margin-left: auto;
+        margin-bottom: 36px;
+        grid-template-columns: 189px 1fr;
+        grid-template-areas: "title edit" "subtitle edit";
     }
 }
