--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,7 +1,6 @@
 .profile__title {
     margin: 0;
     padding: 0;
-    margin-bottom: 16px;
     font-style: normal;
     font-weight: 500;
     font-size: 42px;
@@ -10,13 +9,14 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    grid-area: title;
 }
 
 @media (max-width: 425px) {
     .profile__title {
         font-size: 27px;
         line-height: 33px;
-        text-align: center;
         margin-bottom: 14px;
+        text-align: center;
     }
 }
