--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,12 +5,58 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 51px;
+    display: grid;
     max-width: 880px;
-    display: flex;
+    grid-template-areas: "image text text addb" "image text text addb";
+    grid-template-columns: 150px 312px 1fr 150px;
+}
+
+@media (max-width: 740px) {
+    .profile {
+        grid-template-areas: "image text text" "image text text" "addb addb addb";
+        grid-template-columns: 150px 312px 1fr;
+    }
 }
 
 @media (max-width: 425px) {
     .profile {
-        flex-direction: column;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 120px 1fr 1fr 50px;
+        grid-template-areas: "image image image" "text text text" "text text text" "addb addb addb";
+        justify-content: center;
+        margin-bottom: 36px;
     }
 }
+
+
+/*
+
+.profile {
+    margin: 0;
+    padding: 0;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 51px;
+    max-width: 880px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@media (max-width: 688px) {
+    .profile {
+        flex-direction: column;
+        justify-content: space-around;
+    }
+}
+
+@media (max-width: 425px) {
+    .profile {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 36px;
+    }
+}
+
+*/
