--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,6 +1,7 @@
 .popup__input {
     margin: 0;
     padding: 0;
+    padding-bottom: 13px;
     margin-left: 36px;
     margin-bottom: 27px;
     width: 358px;
@@ -14,7 +15,7 @@
     color: #000000;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 450px) {
     .popup__input {
         width: 238px;
         margin-left: 22px;
