--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -12,11 +12,12 @@
     margin-left: 36px;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 450px) {
     .popup__title {
         font-size: 18px;
         line-height: 22px;
         margin-left: 22px;
         margin-bottom: 75px;
+        margin-top: 25px;
     }
 }
