--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,8 @@
 .element__image {
     margin: 0;
     padding: 0;
-    margin-bottom: 25px;
     max-width: 282px;
+    height: 282px;
+    margin-bottom: 25px;
+    object-fit: cover;
 }
