--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,10 +1,14 @@
 .element__title {
     margin: 0;
     padding: 0;
-    margin-bottom: 31px;
     font-style: normal;
+    margin-bottom: 32px;
     font-weight: 900;
     font-size: 24px;
+    max-width: 223px;
     line-height: 29px;
     color: #000;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
