--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,8 +4,11 @@
     width: 282px;
     margin-left: auto;
     margin-right: auto;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     background-color: white;
     border-radius: 10px;
     overflow: hidden;
+    position: relative;
+    cursor: pointer;
 }
