--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,4 @@
 .popup {
-    display: none;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -11,4 +10,8 @@
     left: 0;
     right: 0;
     z-index: 2;
+    display: flex;
+    visibility: hidden;
+    opacity: 0;
+    transition: .4s ease-in-out;
 }
