--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,8 @@
 @import url("../blocks/element/__like-button/element__like-button.css");
 @import url("../blocks/element/__image/element__image.css");
 @import url("../blocks/element/__container/element__container.css");
+@import url("../blocks/element/__like-button/_active/element__like-button_active.css");
+@import url("../blocks/element/__delete-button/element__delete-button.css");
 
 /* POPUP */
 
@@ -38,10 +40,24 @@
 @import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__save-button/popup__save-button.css");
 @import url("../blocks/popup/__close-button/popup__close-button.css");
+@import url("../blocks/popup/__close-button/_type/popup__close-button_type_edit.css");
+@import url("../blocks/popup/__close-button/_type/popup__close-button_type_add.css");
+@import url("../blocks/popup/__close-button/_type/popup__close-button_type_open-image.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/popup/__input/popup__input.css");
 @import url("../blocks/popup/__input/_type/popup__input_type_job.css");
 @import url("../blocks/popup/__input/_type/popup__input_type_name.css");
+@import url("../blocks/popup/_type/popup_type_photo.css");
+@import url("../blocks/popup/_type/popup_type_info.css");
+@import url("../blocks/popup/_type/_opened/popup_type_info_opened.css");
+@import url("../blocks/popup/_type/_opened/popup_type_photo_opened.css");
+@import url("../blocks/popup/__form/_type/popup__form_type_add.css");
+@import url("../blocks/popup/__form/_type/popup__form_type_edit.css");
+@import url("../blocks/popup/_type/popup_type_open-image.css");
+@import url("../blocks/popup/_type/_opened/popup_type_open-image_opened.css");
+@import url("../blocks/popup/__image/popup__image.css");
+@import url("../blocks/popup/__subtitle/popup__subtitle.css");
+@import url("../blocks/popup/__box/popup__box.css");
 
 /* FOOTER */
 
