--- a/pages/index.css
+++ b/pages/index.css
@@ -39,6 +39,7 @@
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__save-button/popup__save-button.css");
+@import url("../blocks/popup/__save-button/_status/popup__save-button_status_inactive.css");
 @import url("../blocks/popup/__close-button/popup__close-button.css");
 @import url("../blocks/popup/__close-button/_type/popup__close-button_type_edit.css");
 @import url("../blocks/popup/__close-button/_type/popup__close-button_type_add.css");
@@ -55,6 +56,10 @@
 @import url("../blocks/popup/__image/popup__image.css");
 @import url("../blocks/popup/__subtitle/popup__subtitle.css");
 @import url("../blocks/popup/__box/popup__box.css");
+@import url("../blocks/popup/__input/_status/popup__input_status_error.css");
+@import url("../blocks/popup/__error-text/popup__error-text.css");
+@import url("../blocks/popup/__error-text/_status/popup__error-text_status_error.css");
+@import url("../blocks/popup/__label/popup__label.css");
 
 /* FOOTER */
 
