fix: исправлена работа кнопок и валидации форм

--- a/blocks/popup/__label/popup__label.css
+++ b/blocks/popup/__label/popup__label.css
@@ -1,5 +1,6 @@
 .popup__label {
     display: flex;
     flex-direction: column;
-    margin-bottom: 27px;
+    margin-bottom: 29px;
+    height: 44px;
 }
