--- a/src/blocks/element/__like-button/element__like-button.css
+++ b/src/blocks/element/__like-button/element__like-button.css
@@ -1,7 +1,8 @@
 .element__like-button {
     margin: 0;
     padding: 0;
-    margin-top: 5px;
+    margin-top: 3px;
+    margin-bottom: 3px;
     outline: none;
     background-color: transparent;
     width: 22px;
