--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,6 +1,9 @@
 .profile__image {
     width: 120px;
+    height: 120px;
     border-radius: 100%;
+    object-fit: cover;
+    object-position: top;
     grid-area: image;
 }
 
