--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -17,6 +17,7 @@
 @import url("../blocks/profile/__image/profile__image.css");
 @import url("../blocks/profile/__edit-button/profile__edit-button.css");
 @import url("../blocks/profile/__add-button/profile__add-button.css");
+@import url("../blocks/profile/__avatar-button/profile__avatar-button.css");
 
 /* ELEMENTS */
 
@@ -31,6 +32,8 @@
 @import url("../blocks/element/__container/element__container.css");
 @import url("../blocks/element/__like-button/_active/element__like-button_active.css");
 @import url("../blocks/element/__delete-button/element__delete-button.css");
+@import url("../blocks/element/__like-number/element__like-number.css");
+@import url("../blocks/element/__like-container/element__like-container.css");
 
 /* POPUP */
 
@@ -60,6 +63,10 @@
 @import url("../blocks/popup/__error-text/popup__error-text.css");
 @import url("../blocks/popup/__error-text/_status/popup__error-text_status_error.css");
 @import url("../blocks/popup/__label/popup__label.css");
+@import url("../blocks/popup/_type/popup_type_delete.css");
+@import url("../blocks/popup/_type/popup_type_avatar.css");
+@import url("../blocks/popup/__form/_type/popup__form_type_avatar.css");
+@import url("../blocks/popup/__form/_type/popup__form_type_delete.css");
 
 /* FOOTER */
 
